--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="local_song_empty">快去添加自己喜欢的乐谱吧~</string>
     <string name="not_found_empty">啊哦，没有数据~</string>
     <string name="no_more">(*￣ω￣) 没有更多了</string>
-    <string name="loading_wait">请稍等~</string>
+    <string name="loading_wait">请稍等~正在加载</string>
     <bool name="VISIBLE">true</bool>
     <bool name="INVISIBLE">false</bool>
 
